Ex5/deployment-postg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postg-db
  namespace: gb-redmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postg-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postg-db
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 1000Mi
          limits:
            cpu: 200m
            memory: 1000Mi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postg-storage
