Ex5/postg-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postg-service
  namespace: gb-redmine
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postg-db
  type: ClusterIP
