Ex5/rm-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rm-service
  namespace: gb-redmine
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: rm-app
  type: ClusterIP
